corpus/c/macro_include/case-03/snapshots/gcc15/render.ci.txt
src/main.c:3:25: error: [macro_include] error surfaced through macro/include context
help: inspect the user-owned macro invocation or include edge that reaches the failing line
from: invocation of 'FETCH_VALUE' @ src/main.c:3:25
via : include src/wrapper.h:1 <- src/main.c:1
| src/main.c:3:25
| int main(void) { return FETCH_VALUE(); }
|                         ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output